# Cavity-Optimisation

./: .gitignore  CITATION.cff  CONTRIBUTING.md  ML_Regression_compilation.py  Mode1.xlsx  NN_classfication.py  NN_regression.py  README.md  SECURITY.md  decision_tree.py  environment.yml  pyproject.toml  random_forest.py  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml
archive/: README.md
configs/: default.yaml  lightweight_test.yaml  quick.yaml
data/: README.md
reports/: experiment_report.md
results/benchmark/: benchmark_table.csv  sota_comparison.csv
scripts/: build_readme_assets.py  reconstruct_data.py  run_balanced_experiments.py
src/cavity_ml/: __init__.py  cli.py  config.py  constants.py  data_pipeline.py  device.py  io_utils.py  labels.py  models.py  predictor.py  reconstruct.py  reporting.py  trainer.py
src/cavity_ml/web/: __init__.py  app.py
tests/: conftest.py  test_data_pipeline.py  test_integration_pipeline.py
